<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Fit Formula</string>
    <string name="app_name">Fit Formula</string>
    <string name="workout_string">You currently do not have a Workout</string>
    <string name="get_workout">Get Workout</string>
    <string name="my_workout_title">My Workout</string>
    <string name="gender_string">Gender:</string>
    <string name="gender_prompt">Select Gender</string>
    <string name="age_string">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="height_string">Height (cm):</string>
    <string name="enter_height">Enter Height</string>
    <string name="weight_string">Weight (kg):</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_bp">Enter Sys. BP</string>
    <string name="hypertension_string">Are you being treated for Hypertension?</string>
	<string name="smoking_string">Do you Smoke?</string>
	<string name="diabetes_string">Do you have Diabetes?</string>
	<string name="blood_string">Do you know your systolic blood pressure?</string>
	<string name="blood_string_no">I think my blood pressure is:</string>
	<string name="blood_string_yes">Systolic blood pressure (mmHg):</string>
	<string name="start_fit_test_string">Start Fitness Test Now</string>
	<string name="instructions_string">Please fill out the form in order to begin the fitness test.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="male_str">Male</string>
	<string name="female_str">Female</string>
	<string name="step1_instructions">Lightly place your finger over the camera, but do not push too hard. Or
	    the HR sensor will not function correctly.</string>
	<string name="progress_title_string">Taking pulse, please wait&#8230;</string> 
	<string name="bpm_string">BPM</string>
	<string name="bpm_val_string"></string>     
	<string name="do_test_str">You have not yet done a Fitness Test, therefore your Health Center 
	    contains no data.  Please do the Fitness Test and then select a workout to begin your journey towards ultimate fitness prowess.</string> 
	<string name="gen_settings_string">General Settings:</string>   
	<string name="kg_str">kg</string>
	<string name="lbs_str">lbs</string>
	<string name="units_w_str">Units - Weight</string>
	<string name="units_h_string">Units - Height</string>
	<string name="meters_str">cm</string>
	<string name="ft_str">ft</string>
	<string name="audio_cues_string">Audio Cues</string>
	<string name="on_str">On</string>
	<string name="off_str">Off</string>
	<string name="notif_string">Notifications</string>
	<string name="finger_inst">Fit Formula will now take your heart rate using the phone camera and adjacent LED light.  Lightly place your finger over the camera
	    lens, but do not push too hard, or it will not function properly.  Press BEGIN when you are ready!</string>
	<string name="begin">Begin</string>
	<string name="cancel">Cancel</string>
	<string name="st_inst_string">Fit Formula will now guide you through a Step Test in order to gauge your fitness level.  
	    Press \'Continue\' to start the instructional video\, or press \'Cancel\' to return to the beginning of the Fitness Test</string>
	<string name="step2_inst_str">Now that you know how to do the Step Test, we need to make sure you know the pace at which to do it.  
	    The pace that you are currently listening to is your \'Warm-up Pace\' and is based upon your gender and age.  The first part of the Step Test will be the
	    \'Warm-Up\' phase, and it will last 3 minutes.  At the end of the Warm-Up, you will be prompted to take your heart rate again.  
	    When you are ready to begin the test, press \'Begin Warmup\'.  You can cancel the test at any time by pressing \'Cancel Test\'.</string>
	<string name="cancel_test_str">Cancel Test</string>
	<string name="begin_warmup_str">Begin Warmup</string>
	<string name="user_emails">Select a Google account:</string>
	<string name="user_calendars">Select a Calendar to store workouts:</string>
	<string name="get_schedule">Give me my Workout schedule</string>	
	<string name="view_calendar">View Calendar</string>
	<string name="firstw_inst_str">This workout will be used to further assess your fitness level.  First, your heart rate will be taken, then you will run/bike
	    for 8 minutes.  Then, your heart rate will be taken again, and you will be asked for some simple feedback.  After which, we will adjust the remainder
	    of the workout based on your response.  The total length of the workout is 20 minutes.  Press \'Begin Workout\' when you are ready.</string>
	<string name="begin_first_str">Begin Workout</string>
	<string name="time_str">8:00</string>
	<string name="dont_start_workout_str">Back</string>
	<string name="start_workout_str">Begin Workout Now</string>
	<string name="step_time_str">3:00</string>
	<string name="know_hr_str">Do you know your resting heart rate?</string>
	<string name="enter_hr">Enter your resting HR:</string>
	<string name="how_much_exercise_str">How many minutes per week do you workout at a moderate or high intensity? (e.g. jogging, brisk walking)</string>
	<string-array name="excercise_array_str">
		<item>&#60;30</item>
		<item>31&#8211;90</item>
		<item>91&#8211;120</item>
		<item>121&#8211;150</item>
		<item>151&#62;</item>	
	</string-array>
	<string name="next_str">Next</string>
	<string-array name="hc_list_array">
	    <item>Physical Activty Level: Below Average</item>
	    <item>Cardiovascular risk: empty</item>
	    <item>Body Mass Index: empty</item>
	</string-array>
	<string-array name="yes_no_array">
	    <item>Yes</item>
	    <item>No</item>
	</string-array>     
	<string name="hc_recommend_str">Based on your health, we recommend a workout that will help your BMI and at the same time improve your fitness level.</string>
	<string name="hc_question_str">Are you ok with this fitness goal?</string>
	<string name="hc_workout_str">Get my workout now</string>
	<string name="phys_desc_str">To achieve health benefits, adults aged 18-64 years should accumulate at least 150 minutes of moderate to vigorous intensity 
	    aerobic physical activity per week, in bouts of 10 minutes or more.\n\n10 minutes of activity can help reduce the risk of:
	    \nHypertension\nObesity\nType 2 Diabetes\nHeart Disease\nCertain types of cancer\nStroke
	</string>
	<string name="cardio_desc_str">This score indicates the risk that you have for developing cardiovascular diesease (eg. coronary death, myocardial 
	    infarction, stroke and heart failure) over the next 10 years.  Your heart age refelcts the age of your vascualr system.\n\nImproving your dietary
	    and exercise behaviour, while also quitting smoking will help lower your CVD risk score and heart age.
	</string>
	<string name="bmi_desc_str">
	    The rise of developing weight-related health problems is minimal when your BMI is between 18.5 to 24.9. A high BMI (&#62;25 overweight or obese) is associated with 
	    increase risk of health problems such as diabetes, heart disease, high blood pressure, gallbladder diesease and some forms of cancer. A low BMI (&#60;18.5, underweight)
	    is associated with health problems such as osteoporosis, under nutrition, and eating disorders.\nNote: BMI applies to adults 18 years and over with the exception of 
	    pregnant and lactating women.  BMI measurement may not apply if you are an athlete who has a large muscle mass.
	</string>
	<string name="plan_overview_title">My Workout: Plan Overview</string>
	<string name="workout_inst_title">Workout Instructions</string>
	<string name="see_workout">See Workout</string>
	<string name="plan_overview_description">
	    Your fitness goal is:\n
	    - Decrease Body Mass Index (BMI)\n
	    - Increse Physical Activity Level\n\n\n
	    Your 6 week workout is broken down into 3 phases.\n\n
	    Phase 1 (week 1-2) is the introduction phase. We will teach you how to maximize your workouts.  We will be going though how you can workout at an optimal exercise intensity.\n\n
	    Phase 2 (week 3-4) is the adaptation phase. During this phase you will be exercising a little bit harder.\n\n
	    Phase 3 (week 5-6) is the home stretch phase where you will be challenged again.\n\n
	    Let\'s Begin!
	</string>
	<string name="workout_inst_description">
	    Workout intensity: Refers to how hard you are working out.  The intensity is measured by your heart rate.  There are 3 ways you can measure your heart rate.\n\n
	    1) Find the radial pulse.  This is also known as the pulse on the inside of the wrist.  Place the tips of your 3 adjacent finger just below the spot where your
	    wrist creases at the base of thumb.  Press LIGHTLY until you feel a pulse.\n\n
	    2) Find the carotid pulse, on the side of your neck.  Place 2 fingers, index and middle finger, in the hollow between your windpipe and the large muscle in your
	     neck.  Press LIGHTLY until you feel a pulse.\n\n
	    3) Use a hear rate monitor.\n\n\n
	    You may choose any aerobic exercises such as cycling, running, or rowing as long as you are maintaining your hear rate at the optimal hear rate zone.  
	</string>
	<string name="workout_length">Workout duration:</string>
	<string name="health_report">Health Report</string>
	   
</resources>