<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dip"
    >
    <TableRow>
     
    <TextView
        android:id="@+id/first_workout_inst"
        android:textSize="18dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstw_inst_str"
    />
   
    </TableRow>
 
      <TableRow>
     <Button
        android:id="@+id/cancel_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancelWorkout" />
    </TableRow>
    <TableRow>
     <Button
        android:id="@+id/begin_first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_first_str"
        android:onClick="startWorkout" />
     
     </TableRow>
    
</TableLayout>
